# hubdash

./: AGENTS.md  Cargo.toml  README.md  dagger.json  renovate.json
.agents/skills/code-quality-check/: SKILL.md
.agents/skills/dagger/: SKILL.md
.dagger/: go.mod  main.go
.github/workflows/: lint.yml  zizmor.yml
hubdash/: Cargo.toml
hubdash/src/: assets.rs  dashboard.rs  landing.rs  layout.rs  lib.rs  main.rs  mocks.rs
hubdash/src/assets/: dashboard.css  dashboard.js  landing.css  theme.css
